--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+v4.0.1 Snapshot at 2019-07-22
+ - Fix running without logs.
+
 v4.0.0 Snapshot at 2019-07-20
  - Refactor from branch 'manyuser' and simplified code.
  - Split service and local edition.
